# dnd_helper

./: .env.e2e.example  .gitignore  DnD5e_spells_BD.dtn  README.md  compose.yaml  docker-compose.e2e.yml  docker-compose.yml  manage.py  ruff.toml  run_test.sh  seed.py  seed_data.json  seed_data_full.json  seed_data_monsters.json  seed_data_monsters_updated.json  seed_from_dtn.py
api/: Dockerfile  alembic.ini  docker_compose_tests.yml  dockerfile  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 052e2e0c047c_init.py  160c6fd4ba34_iteration6_monster_translations_text_.py  18658707bc59_rename_monster_abilities_to_ability_.py  1f5c0f946a86_move_monster_languages_to_translations_.py  1febb77928f3_add_title_to_spell.py  2b7b4926409f_monsters_add_recommended_columns.py  2fc716665de3_backfill_derived_fields_iter4.py  324555b64bbe_iteration9_finalize_cr_enum.py  3e95296652a5_remove_spell_duplicates.py  3f599b20c4df_iteration6_backfill_slug_and_casting_.py  41cd6d4de9c8_users_add_lang_field.py  4cfa87b1299b_users_telegram_id_to_bigint.py  51e1a43dd399_iteration5_add_gin_indexes.py  5389da909e23_admin_audit_add_audit_table.py  5610c68c1024_add_admin_jobs_table.py  5d7dbf11d3b3_iteration8_add_cr_enum.py  5e102bd3b27d_convert_spell_classes_to_enum_array.py  6974b79e15fb_remove_has_aoe_has_ranget_and_derived_.py  ae3cf287f89e_init_schema.py  (+21 more)
api/tests/: conftest.py  test_integration_crud.py  test_monsters.py  test_monsters_handlers.py  test_monsters_wrapped_i18n.py  test_smoke.py  test_spells.py  test_spells_handlers.py  test_spells_wrapped_i18n.py  test_users.py
bot/: Dockerfile  docker_compose_tests.yml  dockerfile  pyproject.toml
bot/tests/: factories.py  test_dice.py  test_menu_start.py  test_search_flow.py  test_smoke.py
(+160 files in other folders)
