[tool.poetry]
name = "dnd-helper-api"
version = "0.1.0"
description = "FastAPI service for DnD Helper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.110"
uvicorn = { version = ">=0.23", extras = ["standard"] }
psycopg = { version = ">=3.1", extras = ["binary"] }
redis = ">=5"
sqlmodel = ">=0.0.16"
alembic = ">=1.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
httpx = ">=0.27"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


